v6.3.0:
- supply ctrtool (32 and 64 bit versions)
- supply 3dstool (32 and 64 bit versions)
- support for Pokemon Neo X
- support for Pokemon Neo Y

v6.2.2:
- when running patchimage from git, use it's tools, scripts and stuff,
  instead of system-wide (if) installed
- simple progress [x/y] visualization for Tokyo Mirage Sessions #FE
- minor internal changes

v6.2.1:
- support for MKWiimm 2016-07
- update MKWiimm 2016-02 to v2
- update Tokyo Mirage Sessions #FE patcher for version
  0.9.4 of the patch
- update szs to 1.52

v6.2.0:
- code improvements for MKWiimm
- supply xdelta3 (32 and 64 bit versions)
- supply titledumper (32 and 64 bit versions), for use with ddd
- add support for Tokyo Mirage Sessions #FE US/EUR decensoring
  - add --xdelta and --cpk parameters
- use ${WIT} instead of wit when checking image region for
  MKWiimm and Kirbys Adventure Wii
- minor internal changes

v6.1.0:
- update szs to version 1.50a
- update title database
- show "Enter ID (...)" message at the end of menu
- show "ID	Name" header/footer in menu
- show proper version number in --help
- support for new MKWiimm config.def variables ID >= 29
  - default set:
    - MSGLANG1 = -
    - MSGLANG2 = E
  - set from ~/.patchimage.rc
    - TRACKLANG = x,${MKWIIMM_MSG_LANG}
    - CTRENAME = ${MKWIIMM_CTRENAME}
    - REORDER = ${MKWIIMM_CTREORDER}
    - see README.RC for more infos
- support for MKWiimm 2015-08 (ID 29)
- support for MKWiimm 2015-12 (ID 30)
- support for MKWiimm 2016-02 (ID 31)
- support for The Legend of Yoshi (SMN?66)
- support for Remixed Super Mario Bros. Wii (SMN?60)
- support for Ghostly Super Mario Boos. Wii (SMN?65)
- update wit/wszst override for MKWiimm
  - if you can't build MKWiimm, set MKWIIMM_OVERRIDE_SZS=TRUE
    in ~/.patchimage.rc to use supplied tools, that the case
    on Debian GNU/Linux Stretch or Sid
- update link to Wiimmfi-Patcher (Generic)
  - unused Patchimage uses "wit cp --wiimmfi" instead
- update link to Wiimmfi-Patcher (Mario Kart Wii)