@@ -71,6 +71,8 @@ SUK?01		Kirby's Adventure Wii (only exchanging first
 
 0004000000055D00	Pokemon X
 0004000000055E00	Pokemon Y
+000400000011C400	Pokemon Omega Ruby
+000400000011C500	Pokemon Alpha Sapphire
 
 ### Toyko Mirage Sessions #FE ###
 
